// proto/user.proto
syntax = "proto3";

package user;

import "common.proto";

service UserService {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (common.Empty);
  rpc Refresh (RefreshRequest) returns (AuthResponse);

  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);

  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUser (common.Id) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc DeleteUser (common.Id) returns (common.Empty);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string last_name = 1;
  string first_name = 2;
  optional string patronymic = 3;
  string email = 4;
  string password = 5;
}

message LogoutRequest {
  string refresh_token = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
  string secret = 2;
}

message ValidateTokenResponse {
  message Success {
    string user_id = 1;
    string role = 2;
  }
  
  oneof result {
    Success success = 1;
    bool null = 2;
  }
}

message GetUsersRequest {
  int32 limit = 1;
  int32 page = 2;
  optional string search_query = 3;
}

message GetUsersResponse {
  repeated User users = 1;
  common.PaginationResponse page = 2;
}

message CreateUserRequest {
  string last_name = 1;
  string first_name = 2;
  optional string patronymic = 3;
  string email = 4;
}

message User {
  string id = 1;
  string role = 2;
  string full_name = 2;
  string email = 3;
  int64 created_at = 5;
  int64 updated_at = 6;
}
